--- a/charts/meep-platform-ctrl/values.yaml
+++ b/charts/meep-platform-ctrl/values.yaml
@@ -46,8 +46,8 @@ ingress:
     kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
-    # nginx.ingress.kubernetes.io/configuration-snippet: |
-    #   rewrite ^(/api)$ $1/ redirect;
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^/api$ $scheme://$http_host/api/ permanent;
   labels: {}
   tls:
     # Secrets must be manually created in the namespace.
@@ -69,8 +69,8 @@ altIngress:
     kubernetes.io/ingress.class: alt-nginx
     # kubernetes.io/tls-acme: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
-    # nginx.ingress.kubernetes.io/configuration-snippet: |
-    #   rewrite ^(/api)$ $1/ redirect;
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^/api$ $scheme://$http_host/api/ permanent;
   labels: {}
   tls:
     # Secrets must be manually created in the namespace.
