session key passed in env var + cookie timeout set to 90 days + platform-ctrl flush sbox data on creation

--- a/charts/meep-gis-engine/values-template.yaml
+++ b/charts/meep-gis-engine/values-template.yaml
@@ -15,6 +15,7 @@ image:
   pullPolicy: Always
   env:
     MEEP_SANDBOX_NAME: {{ .SandboxName }}
+    MEEP_SESSION_KEY: "my-secret-key"
 
 service:
   name: meep-gis-engine
