--- a/charts/meep-platform-ctrl/values.yaml
+++ b/charts/meep-platform-ctrl/values.yaml
@@ -22,6 +22,8 @@ image:
   repository: meep-platform-ctrl
   tag: latest
   pullPolicy: Always
+  env:
+    MEEP_SESSION_KEY: "my-secret-key"
 
 service:
   type: ClusterIP
