--- a/charts/meep-metrics-engine/values-template.yaml
+++ b/charts/meep-metrics-engine/values-template.yaml
@@ -16,6 +16,7 @@ image:
   env:
     MEEP_SANDBOX_NAME: {{ .SandboxName }}
     MEEP_HOST_URL: {{ .HostUrl }}
+    MEEP_SESSION_KEY: "my-secret-key"
 
 service:
   name: meep-metrics-engine
