--- a/js-apps/meep-frontend/package.json
+++ b/js-apps/meep-frontend/package.json
@@ -8,7 +8,7 @@
     "test:verbose": "jest --verbose true",
     "test:coverage": "jest --verbose true --coverage --colors",
     "build": "webpack",
-    "build:dev": "webpack-serve --port 8091 --host 10.3.16.105"
+    "build:dev": "webpack-dev-server --https true --port 8091 --host 10.3.16.105 --env.MEEP_HOST=10.3.16.105"
   },
   "author": "",
   "license": "ISC",
@@ -35,7 +35,7 @@
     "style-loader": "^0.20.3",
     "webpack": "^4.4.1",
     "webpack-cli": "^3.2.3",
-    "webpack-serve": "^0.3.1"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@geoman-io/leaflet-geoman-free": "2.5.0",
