--- a/js-apps/meep-frontend/package.json
+++ b/js-apps/meep-frontend/package.json
@@ -8,7 +8,7 @@
     "test:verbose": "jest --verbose true",
     "test:coverage": "jest --verbose true --coverage --colors",
     "build": "webpack",
-    "build:dev": "webpack-dev-server --https true --port 8091 --host 10.3.16.105 --env.MEEP_HOST=10.3.16.105"
+    "build:dev": "webpack-dev-server --https true --port 8092 --host 10.3.16.105 --env.MEEP_HOST=10.3.16.105:8081"
   },
   "author": "",
   "license": "ISC",
@@ -47,6 +47,7 @@
     "d3-force": "^2.0.1",
     "d3-hierarchy": "^1.1.8",
     "deep-equal": "2.0.3",
+    "ionicons": "^2.0.1",
     "jquery": "3.3.1",
     "leaflet": "1.6.0",
     "lodash": "^4.17.11",
@@ -68,6 +69,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "rmwc": "^4.0.1",
+    "tinycolor2": "^1.4.1",
     "vis": "4.21.0",
     "warning": "^4.0.1",
     "yamljs": "0.3.0"
