--- a/js-apps/meep-frontend/package.json
+++ b/js-apps/meep-frontend/package.json
@@ -57,6 +57,7 @@
     "material-design-icons": "3.0.1",
     "prop-types": "15.6.2",
     "react": "^16.8.6",
+    "react-autobind": "^1.0.6",
     "react-d3-axis": "^0.1.2",
     "react-d3-graph": "^2.0.2",
     "react-dom": "^16.8.6",
