Added dns lookup with init container for pods in core platform

--- a/charts/meep-webhook/values.yaml
+++ b/charts/meep-webhook/values.yaml
@@ -11,7 +11,9 @@ deployment:
   replicas: 1
   port: 443
   protocol: TCP
-  dependency: meep-redis-master
+  dependency:
+    redis: meep-redis-master
+    coredns: kube-dns
 
 service:
   type: ClusterIP
