--- a/charts/meep-webhook/templates/deployment.yaml
+++ b/charts/meep-webhook/templates/deployment.yaml
@@ -51,7 +51,11 @@ spec:
           configMap:
             name: {{ .Values.configMap }}
       initContainers:
-        - name: init-{{ .Values.deployment.dependency }}
+        - name: init-{{ .Values.deployment.dependency.redis }}
           image: busybox
           imagePullPolicy: IfNotPresent
-          command: ['sh', '-c', 'until nslookup {{ .Values.deployment.dependency }} ; do echo waiting for {{ .Values.deployment.dependency }}; sleep 0.25; done;']
+          command: ['sh', '-c', 'until nslookup {{ .Values.deployment.dependency.redis }} ; do echo waiting for {{ .Values.deployment.dependency.redis }}; sleep 0.25; done;']
+        - name: init-{{ .Values.deployment.dependency.coredns }}
+          image: busybox:1.28
+          imagePullPolicy: IfNotPresent
+          command: ['sh', '-c', 'until nslookup {{ .Values.deployment.dependency.coredns }}.kube-system ; do echo waiting for {{ .Values.deployment.dependency.coredns }}; sleep 0.25; done;']
