Added dns lookup with init container for pods in core sandbox

--- a/charts/meep-rnis/values-template.yaml
+++ b/charts/meep-rnis/values-template.yaml
@@ -8,6 +8,7 @@ deployment:
   replicas: 1
   port: 80
   protocol: TCP
+  dependency: kube-dns
 
 image:
   repository: meep-docker-registry:30001/meep-rnis
