--- a/charts/meep-rnis/templates/deployment.yaml
+++ b/charts/meep-rnis/templates/deployment.yaml
@@ -50,3 +50,9 @@ spec:
             mountPath: /codecov
           {{- end}}
       terminationGracePeriodSeconds: 5
+      initContainers:
+        - name: init-{{ .Values.deployment.dependency }}
+          image: busybox:1.28
+          imagePullPolicy: IfNotPresent
+          command: ['sh', '-c', 'until nslookup {{ .Values.deployment.dependency }}.kube-system ; do echo waiting for {{ .Values.deployment.dependency }}; sleep 0.25; done;']
+
