--- a/charts/meep-platform-ctrl/values.yaml
+++ b/charts/meep-platform-ctrl/values.yaml
@@ -42,7 +42,6 @@ ingress:
     - name: ''
       paths:
         - /
-        - /api
         - /platform-ctrl
   annotations:
     kubernetes.io/ingress.class: nginx
@@ -50,6 +49,8 @@ ingress:
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^/api$ $scheme://$http_host/api/ permanent;
+      rewrite ^/alt$ $scheme://$http_host/alt/ permanent;
+      rewrite ^/alt/api$ $scheme://$http_host/alt/api/ permanent;
   labels: {}
   tls:
     # Secrets must be manually created in the namespace.
