--- a/charts/meep-sandbox-ctrl/values-template.yaml
+++ b/charts/meep-sandbox-ctrl/values-template.yaml
@@ -45,6 +45,7 @@ ingress:
     - name: ''
       paths:
         - /{{ .SandboxName }}/api
+        - /{{ .SandboxName }}/alt/api
         - /{{ .SandboxName }}/sandbox-ctrl
   annotations:
     kubernetes.io/ingress.class: nginx
@@ -52,7 +53,9 @@ ingress:
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^/{{ .SandboxName }}/api$ $scheme://$http_host/{{ .SandboxName }}/api/ permanent;
+      rewrite ^/{{ .SandboxName }}/alt/api$ $scheme://$http_host/{{ .SandboxName }}/alt/api/ permanent;
       rewrite ^/{{ .SandboxName }}/api(/|$)(.*)$ /api/$2 break;
+      rewrite ^/{{ .SandboxName }}/alt/api(/|$)(.*)$ /alt/api/$2 break;
       rewrite ^/{{ .SandboxName }}/sandbox-ctrl(/|$)(.*)$ /sandbox-ctrl/$2 break;
   labels: {}
   tls:
