--- a/config/permissions.yaml
+++ b/config/permissions.yaml
@@ -448,6 +448,13 @@ services:
 #       roles:
 #         admin: 'allow'
 #         user: 'allow'
+#     RefreshUser:
+#       # access authorization mode: allow|block|verify
+#       mode: 'verify'
+#       # role permissions: allow|block
+#       roles:
+#         admin: 'allow'
+#         user: 'allow'
 
 #   #------------------------------
 #   #  RNI Service
