Added initContainer for dependency check of DNS service in scenario pods Changes: - Added InitContainer configuration to sidecarconfig file - This change will work for Virt-Engine chats as well as User defined charts
Tests:
- Cypress and UT's passed
- Checked manual logs in containers after deploying demo1 and demo2 scenario

--- a/charts/meep-webhook/templates/configmap.yaml
+++ b/charts/meep-webhook/templates/configmap.yaml
@@ -12,3 +12,8 @@ data:
         capabilities:
           add:
             - NET_ADMIN
+    initContainers:
+    - name: init-{{ .Values.sidecar.dependency }}
+      image: busybox:1.28
+      imagePullPolicy: IfNotPresent
+      command: ['sh', '-c', 'until nslookup {{ .Values.sidecar.dependency }}.kube-system ; do echo waiting for {{ .Values.sidecar.dependency }}; sleep 0.25; done;']
