Supporting K8s 1.19 in current setup Changes: - Added condition for checking apiversion support of statefulset and deployment in couchdb, kube-state-metrics and redis (master and slave) - Changed apiversion from harcoded values to read from helpers file in statefulset and deployment in couchdb, kube-state-metrics and redis (master and slave) - Changed wait time for Sandbox creation and scenario deployment in Cypress tests from 10 sec to 15 sec
Tests:
- All UT's passed
- All Cypress test cases passed
- Manually checked deploying scenarios demo1 and demo2

--- a/charts/couchdb/templates/statefulset.yaml
+++ b/charts/couchdb/templates/statefulset.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1beta2
+apiVersion: {{ template "couchdb.statefulset.apiVersion" . }}
 kind: StatefulSet
 metadata:
   name: {{ template "couchdb.fullname" . }}
