Removed the conditional checks in helper file and added hardcoded values in deployment and statefulset

--- a/charts/couchdb/templates/statefulset.yaml
+++ b/charts/couchdb/templates/statefulset.yaml
@@ -1,4 +1,4 @@
-apiVersion: {{ template "couchdb.statefulset.apiVersion" . }}
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ template "couchdb.fullname" . }}
