--- a/charts/redis/templates/redis-master-statefulset.yaml
+++ b/charts/redis/templates/redis-master-statefulset.yaml
@@ -1,4 +1,4 @@
-apiVersion: {{ template "redis.statefulset.apiVersion" . }}
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ template "redis.fullname" . }}-master
