--- a/examples/demo2/demo2-scenario.yaml
+++ b/examples/demo2/demo2-scenario.yaml
@@ -1,4 +1,4 @@
-version: 1.5.1
+version: 1.5.3
 name: demo2
 deployment:
     netChar:
@@ -53,6 +53,7 @@ deployment:
                                     id: 1cda8009-92c8-4a3d-adc9-0fbc72b0b490
                                     name: cloud1
                                     type: DC
+                                    connected: true
                                     processes:
                                         -
                                             id: d3faf837-477f-496f-b435-66b3d6e9d0f5
@@ -141,6 +142,8 @@ deployment:
                                     isExternal: null
                                     geoData: null
                                     networkLocationsInRange: null
+                                    wireless: null
+                                    wirelessType: null
                                     meta: null
                                     userMeta: null
                                     linkLatency: null
@@ -153,7 +156,10 @@ deployment:
                             terminalLinkPacketLoss: null
                             meta: null
                             userMeta: null
+                            cellularPoaConfig: null
                             poa4GConfig: null
+                            poa5GConfig: null
+                            poaWifiConfig: null
                             geoData: null
                     interFogLatency: null
                     interFogLatencyVariation: null
@@ -220,7 +226,10 @@ deployment:
                             terminalLinkPacketLoss: null
                             meta: null
                             userMeta: null
+                            cellularPoaConfig: null
                             poa4GConfig: null
+                            poa5GConfig: null
+                            poaWifiConfig: null
                             geoData: null
                             physicalLocations: null
                     interFogLatency: null
@@ -267,6 +276,7 @@ deployment:
                                     id: e8bd434f-1ef2-4d32-b185-98f0bcc1e090
                                     name: zone1-edge1
                                     type: EDGE
+                                    connected: true
                                     processes:
                                         -
                                             id: fdff97b7-f342-4eb5-9a84-57ab4e19f0b5
@@ -341,6 +351,8 @@ deployment:
                                     isExternal: null
                                     geoData: null
                                     networkLocationsInRange: null
+                                    wireless: null
+                                    wirelessType: null
                                     meta: null
                                     userMeta: null
                                     linkLatency: null
@@ -353,7 +365,10 @@ deployment:
                             terminalLinkPacketLoss: null
                             meta: null
                             userMeta: null
+                            cellularPoaConfig: null
                             poa4GConfig: null
+                            poa5GConfig: null
+                            poaWifiConfig: null
                             geoData: null
                         -
                             id: 6b477dd3-eb67-49f9-b1d2-2bfae9376a33
@@ -372,6 +387,7 @@ deployment:
                                     id: 7e992adf-c946-4527-b8e0-f3000215b234
                                     name: zone1-fog1
                                     type: FOG
+                                    connected: true
                                     processes:
                                         -
                                             id: 80f1b9b0-ec43-460a-9948-c59972198f14
@@ -446,6 +462,8 @@ deployment:
                                     isExternal: null
                                     geoData: null
                                     networkLocationsInRange: null
+                                    wireless: null
+                                    wirelessType: null
                                     meta: null
                                     userMeta: null
                                     linkLatency: null
@@ -456,6 +474,8 @@ deployment:
                                     id: a95c7d87-1086-419b-9525-cf74807492e4
                                     name: ue1
                                     type: UE
+                                    connected: true
+                                    wireless: true
                                     processes:
                                         -
                                             id: b0ace81a-f113-4c3a-8414-956165cba4a5
@@ -499,6 +519,7 @@ deployment:
                                     isExternal: null
                                     geoData: null
                                     networkLocationsInRange: null
+                                    wirelessType: null
                                     meta: null
                                     userMeta: null
                                     linkLatency: null
@@ -509,6 +530,8 @@ deployment:
                                     id: a4bff832-de45-4cbb-a54c-17b6b26735ef
                                     name: ue2-ext
                                     type: UE
+                                    connected: true
+                                    wireless: true
                                     processes:
                                         -
                                             id: b13e0551-e6f2-44bd-b720-6e47380bbf4f
@@ -574,6 +597,7 @@ deployment:
                                     isExternal: null
                                     geoData: null
                                     networkLocationsInRange: null
+                                    wirelessType: null
                                     meta: null
                                     userMeta: null
                                     linkLatency: null
@@ -586,7 +610,10 @@ deployment:
                             terminalLinkPacketLoss: null
                             meta: null
                             userMeta: null
+                            cellularPoaConfig: null
                             poa4GConfig: null
+                            poa5GConfig: null
+                            poaWifiConfig: null
                             geoData: null
                         -
                             id: 956fd663-ef11-4992-8845-499a12ea969e
@@ -606,7 +633,10 @@ deployment:
                             terminalLinkPacketLoss: null
                             meta: null
                             userMeta: null
+                            cellularPoaConfig: null
                             poa4GConfig: null
+                            poa5GConfig: null
+                            poaWifiConfig: null
                             geoData: null
                             physicalLocations: null
                     interFogLatency: null
@@ -653,6 +683,7 @@ deployment:
                                     id: d4626b7c-fa9b-47e4-b0bd-8bbf792c4606
                                     name: zone2-edge1
                                     type: EDGE
+                                    connected: true
                                     processes:
                                         -
                                             id: 2e9b5291-51d1-4bf7-b464-fb902e3122cc
@@ -727,6 +758,8 @@ deployment:
                                     isExternal: null
                                     geoData: null
                                     networkLocationsInRange: null
+                                    wireless: null
+                                    wirelessType: null
                                     meta: null
                                     userMeta: null
                                     linkLatency: null
@@ -739,7 +772,10 @@ deployment:
                             terminalLinkPacketLoss: null
                             meta: null
                             userMeta: null
+                            cellularPoaConfig: null
                             poa4GConfig: null
+                            poa5GConfig: null
+                            poaWifiConfig: null
                             geoData: null
                         -
                             id: d4f98d78-253e-470a-af75-02c885c69a0e
@@ -759,7 +795,10 @@ deployment:
                             terminalLinkPacketLoss: null
                             meta: null
                             userMeta: null
+                            cellularPoaConfig: null
                             poa4GConfig: null
+                            poa5GConfig: null
+                            poaWifiConfig: null
                             geoData: null
                             physicalLocations: null
                     interFogLatency: null
